[build-system]
requires = ["setuptools>=59.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-attention"
version = "1.0.0"
authors = [
    {name = "Federico Figari Tomenotti"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
"torch>=2.0.0+cu118",
]

[project.scripts]
my-script = "transformer_attention.transformer" # :function

[tool.setuptools]
packages = ["transformer_attention"]

#[tool.setuptools.packages.find]
#where = ["src"]
#include = ["transformer_attention"]
#namespaces = false